2017-12-12  Mark Wielaard  <mark@klomp.org>

	* dwarf_aggregate_size.c (dwarf_aggregate_size): Don't peel the
	given DIE. Reserve memory for a new DIE first.

2017-12-11  Dima Kogan  <dima@secretsauce.net>

	* dwarf_aggregate_size.c (array_size): Handle multi-dimensional
	arrays properly.

2017-11-03  Mark Wielaard  <mark@klomp.org>

	* dwarf_getlocation.c (__libdw_intern_expression): Handle
	DW_OP_GNU_variable_value.
	* dwarf_getlocation_attr.c (dwarf_getlocation_attr): Likewise.
	* dwarf_getlocation_die.c (dwarf_getlocation_die): Likewise.

2017-11-03  Mark Wielaard  <mark@klomp.org>

	* dwarf_getlocation.c (attr_ok): Always accept DW_FORM_exprloc.
	Update list of acceptable attribute codes based on DWARF5.

2017-11-03  Mark Wielaard  <mark@klomp.org>

	* dwarf.h: Add DW_OP_GNU_variable_value.

2017-10-03  Mark Wielaard  <mark@klomp.org>

	* libdw.h: Define LIBDW_CIE_ID and use it in dwarf_cfi_cie_p.

2017-08-18  Ulf Hermann  <ulf.hermann@qt.io>

	* memory-access.h: Use attribute_packed.

2017-02-27  Ulf Hermann  <ulf.hermann@qt.io>

	* libdwP.h: Use attribute_hidden.
	* libdw_alloc.c: Likewise.

2017-02-27  Ulf Hermann  <ulf.hermann@qt.io>

	* Makefile.am: Use fpic_CFLAGS and dso_LDFLAGS.

2017-07-26  Mark Wielaard  <mark@klomp.org>

	* dwarf.h: Add DW_MACRO_* and compat defines for DW_MACRO_GNU_*.
	* dwarf_getmacros.c (get_table_for_offset): Accept either version
	4 or 5. Use DW_MACRO names instead of DW_MACRO_GNU names.
	(read_macros): Use table version for fake_cu.

2017-07-26  Mark Wielaard  <mark@klomp.org>

	* dwarf_peel_type.c (dwarf_peel_type): Handle DW_TAG_immutable_type,
	DW_TAG_packed_type and DW_TAG_shared_type.
	* libdw.h (dwarf_peel_type): Extend documentation.

2017-07-26  Mark Wielaard  <mark@klomp.org>

	* dwarf.h: Add DW_DEFAULTED_no, DW_DEFAULTED_in_class and
	DW_DEFAULTED_out_of_class.

2017-07-26  Mark Wielaard  <mark@klomp.org>

	* dwarf.h: Add DW_CC_pass_by_reference and DW_CC_pass_by_reference.
